CHANGES IN VERSION 3.1.8
------------------------
 o geneID and geneInCategory methods <2016-09-19, Mon>

CHANGES IN VERSION 3.1.7
------------------------
 o [, [[, head, tail, dim methods for compareClusterResult <2016-08-28, Sun>
 o fixed R-devel check <2016-08-16, Tue>

CHANGES IN VERSION 3.1.6
------------------------
 o update vignette <2016-08-16, Tue>
 o browseKEGG <2016-08-15, Mon>
 o unit test <2016-08-15, Mon>

CHANGES IN VERSION 3.1.5
------------------------
 o move enrichMeSH & gseMeSH to meshes <2016-08-11, Thu>

CHANGES IN VERSION 3.1.4
------------------------
 o MeSH term enrichment analysis (enrichMeSH and gseMeSH) <2016-07-28, Thu>

CHANGES IN VERSION 3.1.3
------------------------
 o export download_KEGG <2016-07-25, Mon>
 o according to the changes of GOSemSim and DOSE <2016-07-05, Tue>

CHANGES IN VERSION 3.1.2
------------------------
 o 'by' parameter for GSEA analysis <2016-07-04, Mon>
 o duplicated KEGG path id for KEGG orthology, only use ko <2016-06-28, Tue>
   + e.g. map00010 and ko00010
   + http://www.kegg.jp/dbget-bin/www_bget?ko+ko00010
   + http://www.kegg.jp/dbget-bin/www_bget?ko+map00010

CHANGES IN VERSION 3.1.1
------------------------
 o getGOLevel and dropGO support using a vector of GO level <2016-05-20, Fri>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/clusterprofiler/zNYHLI6RpJI/1u4XRKfNAQAJ
 o use byte compiler <2016-05-18, Wed>
 o https://github.com/Bioconductor-mirror/clusterProfiler/commit/2949fe8db5464c419c9d1665cb24f43c49ac54ec

CHANGES IN VERSION 3.0.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>

CHANGES IN VERSION 2.99.2
------------------------
 o add keyType parameter in enrichKEGG, enrichMKEGG, gseKEGG and gseMKEGG <2016-05-03, Tue>
 o search_kegg_species function <2016-05-03, Tue>
 o bitr_kegg function <2016-05-03, Tue>

CHANGES IN VERSION 2.99.1
------------------------
 o go2ont function <2016-04-28, Thu>
   + https://www.biostars.org/p/188863/