@@ -1,9 +1,9 @@
 clusterProfiler
 ===============
 
-[![releaseVersion](https://img.shields.io/badge/release%20version-3.0.5-green.svg?style=flat)](https://bioconductor.org/packages/clusterProfiler) [![develVersion](https://img.shields.io/badge/devel%20version-3.1.8-green.svg?style=flat)](https://github.com/GuangchuangYu/clusterProfiler) [![Bioc](http://www.bioconductor.org/shields/years-in-bioc/clusterProfiler.svg)](https://www.bioconductor.org/packages/devel/bioc/html/clusterProfiler.html#since) [![total](https://img.shields.io/badge/downloads-55883/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler) [![month](https://img.shields.io/badge/downloads-2315/month-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler)
+[![releaseVersion](https://img.shields.io/badge/release%20version-3.0.5-green.svg?style=flat)](https://bioconductor.org/packages/clusterProfiler) [![develVersion](https://img.shields.io/badge/devel%20version-3.1.8-green.svg?style=flat)](https://github.com/GuangchuangYu/clusterProfiler) [![Bioc](http://www.bioconductor.org/shields/years-in-bioc/clusterProfiler.svg)](https://www.bioconductor.org/packages/devel/bioc/html/clusterProfiler.html#since) [![total](https://img.shields.io/badge/downloads-56103/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler) [![month](https://img.shields.io/badge/downloads-2315/month-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler)
 
-[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active) [![codecov](https://codecov.io/gh/GuangchuangYu/clusterProfiler/branch/master/graph/badge.svg)](https://codecov.io/gh/GuangchuangYu/clusterProfiler/) [![Last-changedate](https://img.shields.io/badge/last%20change-2016--09--27-green.svg)](https://github.com/GuangchuangYu/clusterProfiler/commits/master) [![commit](http://www.bioconductor.org/shields/commits/bioc/clusterProfiler.svg)](https://www.bioconductor.org/packages/devel/bioc/html/clusterProfiler.html#svn_source) [![GitHub forks](https://img.shields.io/github/forks/GuangchuangYu/clusterProfiler.svg)](https://github.com/GuangchuangYu/clusterProfiler/network) [![GitHub stars](https://img.shields.io/github/stars/GuangchuangYu/clusterProfiler.svg)](https://github.com/GuangchuangYu/clusterProfiler/stargazers)
+[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active) [![codecov](https://codecov.io/gh/GuangchuangYu/clusterProfiler/branch/master/graph/badge.svg)](https://codecov.io/gh/GuangchuangYu/clusterProfiler/) [![Last-changedate](https://img.shields.io/badge/last%20change-2016--09--29-green.svg)](https://github.com/GuangchuangYu/clusterProfiler/commits/master) [![commit](http://www.bioconductor.org/shields/commits/bioc/clusterProfiler.svg)](https://www.bioconductor.org/packages/devel/bioc/html/clusterProfiler.html#svn_source) [![GitHub forks](https://img.shields.io/github/forks/GuangchuangYu/clusterProfiler.svg)](https://github.com/GuangchuangYu/clusterProfiler/network) [![GitHub stars](https://img.shields.io/github/stars/GuangchuangYu/clusterProfiler.svg)](https://github.com/GuangchuangYu/clusterProfiler/stargazers)
 
 [![platform](http://www.bioconductor.org/shields/availability/devel/clusterProfiler.svg)](https://www.bioconductor.org/packages/devel/bioc/html/clusterProfiler.html#archives) [![Build Status](http://www.bioconductor.org/shields/build/devel/bioc/clusterProfiler.svg)](https://bioconductor.org/checkResults/devel/bioc-LATEST/clusterProfiler/) [![Linux/Mac Travis Build Status](https://img.shields.io/travis/GuangchuangYu/clusterProfiler/master.svg?label=Mac%20OSX%20%26%20Linux)](https://travis-ci.org/GuangchuangYu/clusterProfiler) [![AppVeyor Build Status](https://img.shields.io/appveyor/ci/Guangchuangyu/clusterProfiler/master.svg?label=Windows)](https://ci.appveyor.com/project/GuangchuangYu/clusterProfiler) [![install with bioconda](https://img.shields.io/badge/install%20with-bioconda-green.svg?style=flat)](http://bioconda.github.io/recipes/bioconductor-clusterprofiler/README.html)
 
@@ -49,7 +49,7 @@ For details, please visit our project website, <https://guangchuangyu.github.io/
 
 ### Download stats
 
-[![download](http://www.bioconductor.org/shields/downloads/clusterProfiler.svg)](https://bioconductor.org/packages/stats/bioc/clusterProfiler/) [![total](https://img.shields.io/badge/downloads-55883/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler) [![month](https://img.shields.io/badge/downloads-2315/month-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler)
+[![download](http://www.bioconductor.org/shields/downloads/clusterProfiler.svg)](https://bioconductor.org/packages/stats/bioc/clusterProfiler/) [![total](https://img.shields.io/badge/downloads-56103/total-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler) [![month](https://img.shields.io/badge/downloads-2315/month-blue.svg?style=flat)](https://bioconductor.org/packages/stats/bioc/clusterProfiler)
 
          +---------------+---------------+--------------+---------------+--------------+---------------+
          |                                                                              *              |
